@@ -10,6 +10,9 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  [Changed / test requires]
  - Test::More 0.89 → 0
 
+ [Removed / runtime requires]
+ - Dist::Zilla::Util::ConfigDumper
+
 0.002001 2014-08-29T09:56:30Z
  [Changed / test requires]
  - Dist::Zilla::Util::Test::KENTNL 1.001 → 1.003001
